--- a/webroot/css/masthead.css
+++ b/webroot/css/masthead.css
@@ -46,14 +46,17 @@ span {
   display: none;
 }
 
-@media (min-width: 992px) {
+@media (min-width: 1040px) {
   :root {
     --font-size-heading-text: 36px;
     --font-size-paragraph-text: 18px;
   }
 
+  body {
+    margin-left: 158px;
+  }
   .sports_app__navigation {
-  justify-content: flex-start;
+    justify-content: flex-start;
   }
 
   .sport_advertisement {
@@ -69,17 +72,18 @@ span {
     height: 52px;
     font-size: 18px;
     line-height: 26px;
+    text-align: left;
   }
 
   .sport_app__masthead {
     max-width: 100%;
     max-height: 100%;
     background-image: url(../img/bg_header.png);
-    background-position: right;
+    background-position: 646px 10px;
     background-size: contain;
     background-repeat: no-repeat;
     padding: 0;
-    margin-left: 158px;
     text-align: left;
+    margin: auto;
   }
 }
